<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.sub3_githubusers.ui.fragment.HomeFragment"
        android:label="@string/main_tab_1"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.dicoding.sub3_githubusers.ui.fragment.FavoritFragment"
        android:label="@string/main_tab_2"
        tools:layout="@layout/fragment_favorit" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.dicoding.sub3_githubusers.ui.fragment.SettingsFragment"
        android:label="@string/main_tab_3"
        tools:layout="@layout/fragment_settings" />

</navigation>