<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/img_about"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/my_photo"
        android:scaleType="fitCenter"
        android:src="@drawable/my_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/my_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/img_about"
        app:layout_constraintStart_toStartOf="@+id/img_about"
        app:layout_constraintTop_toBottomOf="@+id/img_about" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/my_email"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="32dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/ig"
        android:scaleType="centerInside"
        android:src="@drawable/ig"
        app:layout_constraintEnd_toStartOf="@+id/btn_git"
        app:layout_constraintTop_toTopOf="@+id/btn_git" />

    <ImageButton
        android:id="@+id/btn_git"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:background="?selectableItemBackgroundBorderless"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/git"
        android:scaleType="centerInside"
        android:src="@drawable/github"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:background="?selectableItemBackgroundBorderless"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/linkedin"
        android:scaleType="centerCrop"
        android:src="@drawable/linkedin"
        app:layout_constraintStart_toEndOf="@+id/btn_git"
        app:layout_constraintTop_toTopOf="@+id/btn_git" />

</androidx.constraintlayout.widget.ConstraintLayout>